Login Form with React

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  
+  "homepage": "http://avijit-gos.github.io/Login-React-Project1",
   "name": "myproject",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +17,8 @@
     "yup": "^0.32.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
